test/langtools/tools/javac/valhalla/lworld-values/EmptyValueTest.out
EmptyValueTest.java:7:21: compiler.err.empty.value.not.yet
1 error
